--- a/productos.html
+++ b/productos.html
@@ -18,6 +18,10 @@
     <!-- LINK CDN FONTAWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
+    <!-- ENLACE A JSPDF PARA EL COTIZADOR  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+
+
 </head>
 
 <body>
@@ -36,22 +40,28 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+
+
+
+                        <li class="nav-item" id="inicioNavItem" class="position-relative">
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio <i
                                     class="fas fa-home"></i></a>
                         </li>
-                        <li class="nav-item">
+
+
+                        <li class="nav-item expandible">
                             <a class="nav-link" href="nosotros.html">Nosotros <i class="fas fa-users"></i></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item expandible">
                             <a class="nav-link" href="productos.html">Productos <i class="fas fa-tag"></i></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item expandible">
                             <a class="nav-link" href="contactos.html">Contáctenos <i class="fas fa-envelope"></i></a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="Búsqueda">
-                        <input class="form-control me-2" type="search" placeholder="Busca artículos, boletines..."
+                    <!---CUADRO DE BUSQUEDA-->
+                    <form class="d-flex" role="Búsqueda" onsubmit="palabraClave(); return false;">
+                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Palabra Clave"
                             aria-label="Search">
                         <button class="btn btn-outline-success btn-custom" type="submit">Buscar</button>
                     </form>
@@ -70,7 +80,7 @@
 
                 <!--PRODUCTO 1-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 1.png" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Paquetería Nacional</strong></h5>
@@ -83,7 +93,7 @@
 
                 <!--PRODUCTO 2-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 2.png" class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Exportación e Importación</strong></h5>
@@ -95,7 +105,7 @@
 
                 <!--PRODUCTO 3-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 3.png" class="card-img-top" alt="Producto 3">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Compras por Internet</strong></h5>
@@ -108,7 +118,7 @@
 
                 <!--PRODUCTO 4-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 4.png" class="card-img-top" alt="Producto 4">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Especiales</strong></h5>
@@ -120,7 +130,7 @@
 
                 <!--PRODUCTO 5-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 5.png" class="card-img-top" alt="Producto 5">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Te lo compro</strong></h5>
@@ -138,7 +148,7 @@
 
                 <!--PRODUCTO 6-->
                 <div class="col-md-4 mb-4">
-                    <div class="card">
+                    <div class="card shadow carta-producto">
                         <img src="assets/producto 6.png" class="card-img-top" alt="Producto 6">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Documentos</strong></h5>
@@ -159,174 +169,92 @@
         </div>
 
         <section>
-    <h2><strong>Cotizador de Envíos Nacionales</strong></h2><br> 
+            <h2><strong>Cotizador de Envíos Nacionales</strong></h2><br>
 
-    <!--TABLA-->
-    <section>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Trayectos</th>
-                    <th>Kilo Inicial</th>
-                    <th>Kilo Adicional*</th>
-                </tr>
-            </thead>
-            <tbody>
+            <!--TABLA-->
+            <section>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Trayectos</th>
+                            <th>Kilo Inicial</th>
+                            <th>Kilo Adicional*</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
-                <tr>
-                    <td>LOCAL</td>
-                    <td>$2,55</td>
-                    <td>$0,65</td>
-                </tr>
-                <tr>
-                    <td>CANTONAL/PROVINCIAL</td>
-                    <td>$4,00</td>
-                    <td>$0,70</td>
-                </tr>
-                <tr>
-                    <td>REGIONAL</td>
-                    <td>$4,70</td>
-                    <td>$0,75</td>
-                </tr>
-                <tr>
-                    <td>ESPECIAL</td>
-                    <td>$5,25</td>
-                    <td>$0,88</td>
-                </tr>
-                <tr>
-                    <td>ISLAS GALÁPAGOS</td>
-                    <td>$8,70</td>
-                    <td>$2,55</td>
-                </tr>
-            </tbody>
-        </table>
-        <h6>*precios sujetos a cambios</h6>
-    </section>
-    <br>
-    <hr>
+                        <tr>
+                            <td>LOCAL</td>
+                            <td>$2,55</td>
+                            <td>$0,65</td>
+                        </tr>
+                        <tr>
+                            <td>CANTONAL/PROVINCIAL</td>
+                            <td>$4,00</td>
+                            <td>$0,70</td>
+                        </tr>
+                        <tr>
+                            <td>POR REGION</td>
+                            <td>$4,50</td>
+                            <td>$0,75</td>
+                        </tr>
+                        <tr>
+                            <td>CHARTER</td>
+                            <td>$6,25</td>
+                            <td>$0,88</td>
+                        </tr>
+                        <tr>
+                            <td>ISLAS GALÁPAGOS</td>
+                            <td>$7,70</td>
+                            <td>$2,55</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h6>*precios sujetos a cambios</h6>
+            </section>
+            <br>
 
-    <!--CUERPO DEL COTIZADOR / FORMULARIO COTIZADOR -->
-    <br><br><br><br><div class="row w-100" style="margin-top: -62px;">
-        <div id="parte1" class="col-md-12 d-flex">
-            <div class="col-md-6" style="margin-right: 20px;">
-                <div class="form-group">
-                    <div class="text-label2">CIUDAD ORIGEN</div>
-                    <div class="form-group">
-                        <span>
-                            <select class="form-control" id="ciudadOrigen" name="ciudadOrigen">
-                                <option value="1">MACHACHI</option>
-                                        <option value="2">QUITO</option>
-                                        <option value="3">CUENCA</option>
-                                        <option value="4">AMBATO</option>
-                                        <option value="5">MACHALA</option>
-                                        <option value="6">DURÁN</option>
-                                        <option value="7">PORTOVIEJO</option>
-                                        <option value="8">MANTA</option>
-                                        <option value="9">ELOY ALFARO</option>
-                                        <option value="10">ESMERALDAS</option>
-                                        <option value="11">IBARRA</option>
-                                        <option value="12">LOJA</option>
-                                        <option value="13">RIOBAMBA</option>
-                                        <option value="14">QUEVEDO</option>
-                                        <option value="15">PLAYAS</option>
-                                        <option value="16">SANTO DOMINGO</option>
-                                        <option value="17">LATACUNGA</option>
-                                        <option value="18">PEDERNALES</option>
-                                        <option value="19">GUARANDA</option>
-                                        <option value="20">AZOGUES</option>
-                                        <option value="21">TULCÁN</option>
-                                        <option value="22">VINCES</option>
-                                        <option value="23">TENA</option>
-                                        <option value="24">SANTA ELENA</option>
-                                        <option value="25">MACAS</option>
-                                        <option value="26">SANTA ROSA</option>
-                                        <option value="27">OTAVALO</option>
-                                        <option value="28">PUERTO FRANCISCO DE ORELLANA</option>
-                                        <option value="29">LAGO AGRIO</option>
-                                        <option value="30">ZAMORA</option>
-                            </select>
-                        </span>
-                    </div>
-                </div><br>
-                <div class="form-group">
-                    <div class="text-label2">SEGURIDAD</div>
-                    <span>
-                        <select id="seguro">
-                            <option value="0">NO</option>
-                            <option value="1">SI</option>
+
+            <section class="container mt-4">
+                <form id="cotizador">
+                    <div class="mb-3">
+                        <label for="trayecto" class="form-label">Tipo de trayecto:</label>
+                        <select id="trayecto" class="form-select">
+                            <option value="2.55">LOCAL</option>
+                            <option value="4.00">CANTONAL/PROVINCIAL</option>
+                            <option value="4.50">POR REGION</option>
+                            <option value="6.25">CHARTER</option>
+                            <option value="7.70">ISLAS GALÁPAGOS</option>
                         </select>
-                    </span>
-                </div><br>
-                <div class="form-group">
-                    <div class="text-label2">PESO DEL ARTÍCULO (kg)</div>
-                    <input type="text" class="form-control" id="pesoArticulo" name="pesoArticulo">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group xs-up">
-                    <div class="destino">CIUDAD DESTINO</div>
-                    <div class="form-group">
-                        <span>
-                            <select class="form-control" id="ciudadDestino" name="ciudadDestino">
-                                <option value="1">MACHACHI</option>
-                                        <option value="2">QUITO</option>
-                                        <option value="3">CUENCA</option>
-                                        <option value="4">AMBATO</option>
-                                        <option value="5">MACHALA</option>
-                                        <option value="6">DURÁN</option>
-                                        <option value="7">PORTOVIEJO</option>
-                                        <option value="8">MANTA</option>
-                                        <option value="9">ELOY ALFARO</option>
-                                        <option value="10">ESMERALDAS</option>
-                                        <option value="11">IBARRA</option>
-                                        <option value="12">LOJA</option>
-                                        <option value="13">RIOBAMBA</option>
-                                        <option value="14">QUEVEDO</option>
-                                        <option value="15">PLAYAS</option>
-                                        <option value="16">SANTO DOMINGO</option>
-                                        <option value="17">LATACUNGA</option>
-                                        <option value="18">PEDERNALES</option>
-                                        <option value="19">GUARANDA</option>
-                                        <option value="20">AZOGUES</option>
-                                        <option value="21">TULCÁN</option>
-                                        <option value="22">VINCES</option>
-                                        <option value="23">TENA</option>
-                                        <option value="24">SANTA ELENA</option>
-                                        <option value="25">MACAS</option>
-                                        <option value="26">SANTA ROSA</option>
-                                        <option value="27">OTAVALO</option>
-                                        <option value="28">PUERTO FRANCISCO DE ORELLANA</option>
-                                        <option value="29">LAGO AGRIO</option>
-                                        <option value="30">ZAMORA</option>
-                            </select>
-                        </span>
                     </div>
-                </div><br>
-                <div>
-                    <div>TIPO DE SERVICIO</div>
-                    <div>
-                        <span>
-                            <select id="tipoMercancia" name="tipoMercancia">
-                                <option value="1">MERCANCÍAS ESPECIALES</option>
-                                <option value="2">PAQUETE SIMPLE</option>
-                            </select>
-                        </span>
+
+                    <div class="mb-3">
+                        <label for="peso" class="form-label">Peso del artículo (kg):</label>
+                        <input type="number" id="peso" class="form-control" min="0">
                     </div>
-                </div><br>
-                <br>
-                <button type="button" class="btn btn-success btn-cotizar">Cotizar</button>
-            </div>
-        </div>
-    </div>
-</section>
+
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" id="seguro" class="form-check-input">
+                        <label for="seguro" class="form-check-label">Seguro de pérdidas (Costo adicional $10)</label>
+                    </div>
+
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" id="paqueteriaPremium" class="form-check-input">
+                        <label for="paqueteriaPremium" class="form-check-label">Paquetería Premium (Costo adicional
+                            $15)</label>
+                    </div>
+
+                    
+                    <button type="button" onclick="calcular()" class="btn btn-success">Cotizar</button>
+                    <button type="button" onclick="limpiarCampos()" class="btn btn-primary">Nueva Cotización</button>
+                    <button type="button" onclick="generarPDF()" class="btn btn-danger">Imprimir Cotización</button>
+                    <br><br><p><strong>Nota:</strong> Presione "Cotizar" y luego "Imprimir Cotización" para obtener su PDF.</p>
+                </form>
+                </form>
+
+                <p id="resultado" class="mt-3"></p>
+            </section>
     </main>
-
-
-
-
-
-
-
 
     <footer>
         <h6 class="siguenos">Síguenos en nuestras redes sociales como @MaxImportEc <i class="fab fa-facebook"
@@ -341,6 +269,8 @@
         <p>Email: ventas@maximport.com.ec</p>
         <p class="copyright">&copy; 2024 MaxImport. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
